[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pci-passthrough-assist"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Filip Strajnar", email = "filip.strajnar@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Filip Strajnar/pci-passthrough-assist#readme"
Issues = "https://github.com/Filip Strajnar/pci-passthrough-assist/issues"
Source = "https://github.com/Filip Strajnar/pci-passthrough-assist"

[tool.hatch.version]
path = "src/pci_passthrough_assist/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pci_passthrough_assist tests}"

[tool.coverage.run]
source_pkgs = ["pci_passthrough_assist", "tests"]
branch = true
parallel = true
omit = [
  "src/pci_passthrough_assist/__about__.py",
]

[tool.coverage.paths]
pci_passthrough_assist = ["src/pci_passthrough_assist", "*/pci-passthrough-assist/src/pci_passthrough_assist"]
tests = ["tests", "*/pci-passthrough-assist/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
